Refactor category handling in crawler_full.py and update .env.example
- Changed CATEGORY_NAME to CATEGORY_NAMES in .env.example to support multiple categories.
- Updated crawler_full.py to handle CATEGORY_NAMES as a list, allowing for improved category selection.
- Enhanced the select_category method to utilize locators for better element handling.
- Added a wait_for_product_list_api method to ensure API responses are completed before proceeding.

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,9 @@ JD_USERNAME=your_username
 JD_PASSWORD=your_password
 
 # 爬取配置
-# CATEGORY_NAME: 页面筛选区"类目"行的选项，如: 坚果、薯片薯条、其它膨化食品、糕点/饼、夹心饼干、薯片虾条、坚果蜜饯礼盒 等
-# 留空则不筛选类目
-CATEGORY_NAME=薯片薯条
+# CATEGORY_NAMES: 页面筛选区"类目"行的选项，支持多个类目用逗号分隔
+# 例如: 坚果,薯片薯条,其它膨化食品,糕点/饼,夹心饼干
+# 每个类目的数据会独立保存到单独的文件
+CATEGORY_NAMES=薯片薯条,坚果
 START_PAGE=1
-END_PAGE=3
+END_PAGE=2
